--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Search
         </button>
       </form>
-      <div class="content-result flex margin-s">
+      <div id="content-result" class="content-result flex margin-s">
         <div id="card" class="weather-card">
           <p id="cityName"></p>
           <div class="date" id="date"></div>
